--- a/s-messenger/index.html
+++ b/s-messenger/index.html
@@ -1620,7 +1620,7 @@
 					<button id="connectbutton" class=uibutton style="display:block; margin-left: auto; margin-right: auto;" onclick="Connect()">Connect</button>
 					<h3 id="error" align=center style="color: red; opacity: 0;">ERROR</h3>
 					<p id="versionShow" style="position: absolute; top: 2px; left: 4px;"></p>
-					<p style="position: absolute; top: 1.1em; left: 4px; max-width:50%;">© SCP Technologies Ltd 1999-2004<br>SCP Foundation 1982-2004</p>
+					<p style="position: absolute; top: 1.1em; left: 4px; max-width:50%;">© SCP Technologies Ltd 1999-2022<br>SCP Foundation 1982-2022<br>Generate. Collect. Deliver.<br><span onclick='document.getElementById("ws").value = "@S_Messenger TG"'>Hic manebimus optime.</span></p>
 					<div style="display: block; position: absolute; top: 2px; right: 4px;"><button id="updatebutton" class=uibutton onclick="location.reload()">Refresh</button></div>
 				</div>
 			</div>
